[package]
name = "ratwrap-macros"
description = "macros for ratwrap"
version = "1.0.1"
authors = ["mnmun <mnmnmun@proton.me>"]
homepage = "https://github.com/mnmun/ratwrap-macros"
repository = "https://github.com/mnmun/ratwrap-macros"
documentation = "https://docs.rs/ratwrap-macros/latest/ratwrap_macros/"
readme = "README.md"
keywords = ["macros", "ratwrap", "terminal", "tui"]
categories = ["command-line-interface"]
exclude = ["flake.nix", "flake.lock"]
license = "MIT"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
